# thermal-modelling-cubesat-cpp

./: .gitignore  CMakeLists.txt  HeatFluxMatrix.cpp  TemperatureMatrix.cpp  ThermalSimulation.cpp  ThermalSimulation.h  ViewFactorMatrix.cpp  ViewFactorMatrix.h  analysis.r  constants.json  main.cpp
Classes/: ThermalSimulation.h
Classes/Matrices/: DataStorage.cpp  DataStorage.h  HeatFluxMatrix.h  HeatRateMatrix.cpp  HeatRateMatrix.h  Matrix.cpp  Matrix.h  TemperatureMatrix.h  ViewFactorMatrix.h
